src/objects/inscor__Cycle_Count_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Count__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cycle Count</label>
        <referenceTo>inscor__Cycle_Count__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Deduct_Quantity_on_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deduct Quantity on Repair?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Discrepancy_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discrepancy ID</label>
        <referenceTo>inscor__Cycle_Count_Discrepancy__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Comments__c</fullName>
        <label>Inventory Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>inscor__Inventory_Location__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Available__c</fullName>
        <formula>(inscor__Quantity__c) - (inscor__Quantity_Allocated__c +  IF(inscor__Deduct_Quantity_on_Repair__c, 0, inscor__Quantity_on_Repair__c)  + inscor__Quantity_on_Exchange__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_Exchange__c</fullName>
        <label>Quantity on Exchange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_Repair__c</fullName>
        <label>Quantity on Repair</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>Cycle Count Lines</relationshipLabel>
        <relationshipName>Cycle_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cycle Count Line</label>
    <nameField>
        <displayFormat>CCL-{0}</displayFormat>
        <label>Cycle Count Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Count Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>